# serverless-rust-repo

./: .gitignore  Cargo.toml  README.md
apps/example/: Cargo.toml
apps/example/src/v1/bye/: get.rs
apps/example/src/v1/hello/: get.rs
