[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.5.2"
lambda_runtime = "0.5.1"
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
# aws-sdk-dynamodb = "0.12.0"
# aws-config = "0.12.0"

[[bin]]
name = "v1-hello-get"
path = "src/v1/hello/get.rs"

[[bin]]
name = "v1-bye-get"
path = "src/v1/bye/get.rs"